[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/controls/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://src/controls/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/tileset.png" type="Texture" id=7]
[ext_resource path="res://assets/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy.png" type="Texture" id=9]
[ext_resource path="res://assets/player.png" type="Texture" id=10]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 80, 0, 80, 80, 0, 80 )

[sub_resource type="TileSet" id=1]
0/name = "tileset.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -20.0
margin_right = 46.5
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 135.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 55.0
margin_bottom = 30.0
text = "Music:"
align = 1

[node name="MusicButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 135.0
margin_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 135.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 9.0
margin_right = 37.0
margin_bottom = 30.0
text = "SFX:"
align = 1

[node name="SFXButton" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 41.0
margin_right = 117.0
margin_bottom = 40.0

[node name="Title" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -196.5
margin_top = 99.0
margin_right = 196.5
margin_bottom = 183.0
text = "Settings"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65555, 0, 0, 131072, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196627, 0, 0, 262144, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327692, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393222, 0, 0, 393228, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 914, 190 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Coin2" type="Sprite" parent="."]
position = Vector2( 631, 503 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Coin3" type="Sprite" parent="."]
position = Vector2( 992, 367 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Enemy" type="Sprite" parent="."]
position = Vector2( 250, 533 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Enemy2" type="Sprite" parent="."]
position = Vector2( 125, 367 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Enemy3" type="Sprite" parent="."]
position = Vector2( 992, 197 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 520, 430 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Start Button" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 95.0
margin_right = 80.0
margin_bottom = 140.0
text = "Main Menu"
nextScenePath = "res://src/screens/Main Screen.tscn"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/MusicButton" to="." method="_on_music_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/SFXButton" to="." method="_on_sfx_toggled"]
